# bigwork

./: .gitignore  README.md  check.py  demo.py  environment.yml  non_model_params.pkl  out.txt  out1.txt  output1.txt  output3.txt  output4.txt  pyproject.toml  test.py  test_inference.py  test_jittor.py  tran1.py  trans.py  trans2.py
nkyolo/: __init__.py
nkyolo/cfg/: __init__.py  default.yaml
nkyolo/cfg/models/11/: yolo11.yaml
nkyolo/cfg/models/ms/: yolov10n-ms.yaml  yolov10s-ms.yaml
nkyolo/cfg/models/v10/: yolov10b.yaml  yolov10l.yaml  yolov10m.yaml  yolov10n.yaml  yolov10s.yaml  yolov10x.yaml
nkyolo/cfg/models/v5/: yolov5-p6.yaml  yolov5.yaml
nkyolo/cfg/models/v6/: yolov6.yaml
nkyolo/cfg/models/v8/: yolov8-ghost-p2.yaml  yolov8-ghost-p6.yaml  yolov8-ghost.yaml  yolov8-p2.yaml  yolov8-p6.yaml  yolov8.yaml
nkyolo/cfg/models/v9/: yolov9c.yaml  yolov9e.yaml  yolov9m.yaml  yolov9s.yaml  yolov9t.yaml
nkyolo/data/: __init__.py  augment.py  base.py  build.py  converter.py  dataset.py  loaders.py  split_dota.py  utils.py
nkyolo/data/scripts/: get_coco.sh
nkyolo/engine/: __init__.py  model.py  predictor.py  results.py  trainer.py  validator.py
nkyolo/models/: __init__.py
nkyolo/models/utils/: loss.py  ops.py
nkyolo/models/yolo/: __init__.py  model.py
nkyolo/models/yolo/detect/: predict.py  train.py  val.py
nkyolo/nn/: __init__.py  autobackend.py  tasks.py
nkyolo/nn/modules/: __init__.py  activation.py  block.py  conv.py  head.py  transformer.py  utils.py
nkyolo/utils/: __init__.py  autobatch.py  benchmarks.py  checks.py  dist.py  downloads.py  errors.py  files.py  instance.py  jittor_utils.py  loss.py  metrics.py  ops.py  patches.py  plotting.py  tal.py
nkyolo/utils/callbacks/: __init__.py  base.py  wb.py
